@@ -72,6 +72,7 @@ following names for their contribution to the product.
 * Brent G
 * Brianna Laugher
 * Carlin
+* Conrad Irwin
 * Crb
 * Dan Nessett
 * Daniel Arnold
